<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="ad_not_ready">Ad Not Ready</string>
    <string name="add_life_label">Add Life</string>
    <string name="ads_removed">Ads Removed!</string>
    <string name="animation_speed_label">Animation Speed</string>
    <string name="app_name">Arrows Untangle</string>
    <string name="auto_label">Auto</string>
    <string name="cancel_label">Cancel</string>
    <string name="choose_forced_shape_title">Choose Forced Shape</string>
    <string name="choose_theme_title">Choose Theme</string>
    <string name="congratulations_amazing">Amazing!</string>
    <string name="congratulations_awesome">Awesome!</string>
    <string name="congratulations_brilliant">Brilliant!</string>
    <string name="congratulations_excellent">Excellent!</string>
    <string name="congratulations_fantastic">Fantastic!</string>
    <string name="congratulations_good_job">Good Job!</string>
    <string name="congratulations_great">Great!</string>
    <string name="congratulations_outstanding">Outstanding!</string>
    <string name="congratulations_super">Super!</string>
    <string name="congratulations_well_done">Well Done!</string>
    <string name="content_description_ad">Ad</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_generate">Generate Custom Level</string>
    <string name="content_description_guidance_lines">Guidance Lines</string>
    <string name="content_description_life">Life</string>
    <string name="content_description_open">Open</string>
    <string name="content_description_reset_view">Reset View</string>
    <string name="content_description_restart">Restart</string>
    <string name="continue_label">Continue</string>
    <string name="current_level_label">Current Level</string>
    <string name="custom_gen_title">Generator</string>
    <string name="custom_gen_warning_message">Starting a custom game will discard your currently saved game. Do you want to proceed?</string>
    <string name="custom_gen_warning_title">Discard Progress?</string>
    <string name="debug_menu_title">DEBUG MENU</string>
    <string name="email_body_template">\n\n\n---\nApp Version: %1$s\nDevice: %2$s</string>
    <string name="email_subject">Arrows Untangle Game Support</string>
    <string name="error_could_not_launch_review">Could not launch review flow</string>
    <string name="error_could_not_open_browser">Could not open browser</string>
    <string name="error_could_not_load_licenses">Could not load licenses</string>
    <string name="error_could_not_open_email">Could not open email app</string>
    <string name="fill_board_label">Fill board (slower)</string>
    <string name="forced_height_label">Forced Height</string>
    <string name="forced_lives_label">Forced Lives</string>
    <string name="forced_shape_label">Forced Shape</string>
    <string name="forced_width_label">Forced Width</string>
    <string name="game_over_message">You are out of lives! Would you like to restart the board or watch an ad?</string>
    <string name="game_over_title">Game Over</string>
    <string name="generate_start_label">Generate &amp; Start</string>
    <string name="generating_progress">Generating… %1$d%%</string>
    <string name="height_auto_label">Height (0 for Auto)</string>
    <string name="height_label">Height</string>
    <string name="hint_label">Hint</string>
    <string name="home_label">Home</string>    <string name="level_dialog_title">Level</string>
    <string name="level_label">Level %1$d</string>
    <string name="lives_auto_label">Lives (0 for Auto)</string>
    <string name="loading_ad">Loading Ad…</string>
    <string name="loading_label">Loading..</string>
    <string name="manage_consent_label">Manage GDPR consent</string>
    <string name="more_games_label">More Games</string>
    <string name="none_auto_label">None (Auto)</string>
    <string name="none_label">None</string>
    <string name="ok_label">OK</string>
    <string name="play_label">Play</string>
    <string name="privacy_label">Privacy</string>
    <string name="proceed_label">Proceed</string>
    <string name="rate_us_label">Rate us</string>
    <string name="regenerate_level_label">Regenerate Level</string>
    <string name="remove_ads_label">Remove Ads</string>
    <string name="restart_board_label">Restart Board</string>
    <string name="settings_label">Settings</string>
    <string name="shape_label">Shape</string>
    <string name="shape_rectangular">Rectangular</string>
    <string name="sounds_label">Sounds</string>
    <string name="source_code_label">Source Code</string>
    <string name="speed_high">High</string>
    <string name="speed_low">Low</string>
    <string name="speed_medium">Medium</string>
    <string name="theme_bw">Black and White</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_green">Green</string>
    <string name="theme_label">Theme</string>
    <string name="theme_orange">Orange</string>
    <string name="theme_red">Red</string>
    <string name="theme_yellow">Yellow</string>
    <string name="third_party_licenses_label">Third Party Licenses</string>
    <string name="vibrations_label">Vibrations</string>
    <string name="watch_ad_label">Watch Ad</string>
    <string name="width_auto_label">Width (0 for Auto)</string>
    <string name="width_label">Width</string>
    <string name="win_videos_label">Videos enabled</string>
    <string name="write_us_label">Write us</string>
</resources>
