...
        emptyList()
    } else {
        currentState
    }
}

const val GAME_AREA_TEST_TAG = "game_area"

@Composable
private fun ColumnScope.GameArea(params: GameAreaParams) {
    Box(
        modifier =
            Modifier
...
